@@ -1170,8 +1170,18 @@ std::string get_wml_location(const std::string &filename, const std::string &cur
 	else if (filename.size() >= 2 && filename[0] == '.' && filename[1] == '/')
 	{
 		// If the filename begins with a "./", look in the same directory
-		// as the file currrently being preprocessed.
-		result = current_dir + filename.substr(2);
+		// as the file currently being preprocessed.
+
+		if (!current_dir.empty())
+		{
+			result = current_dir;
+		}
+		else
+		{
+			result = game_config::path;
+		}
+
+		result += filename.substr(2);
 	}
 	else if (!game_config::path.empty())
 		result = game_config::path + "/data/" + filename;
